# obs-gtk

./: .cirrus.yml  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.rst  meson.build  meson_options.txt
.github/workflows/: clang-format.yml  crowdin-sync-upload.yml  docs.yml  main.yml
CI/: build-macos.sh  check-cmake.sh  check-format.sh
CI/flatpak/: com.obsproject.Studio.GTK4.json
CI/freebsd/: 01_install_dependencies.sh
CI/include/: build_support_macos.sh  build_support_windows.ps1
CI/linux/: 01_install_dependencies.sh  02_build_obs.sh
CI/macos/: 01_install_dependencies.sh  02_build_obs.sh
CI/windows/: 01_install_dependencies.ps1  02_build_obs.ps1
UI/: qt-wrappers.cpp
cmake/Modules/: DeprecationHelpers.cmake  FindEpoxy.cmake  FindGBM.cmake  FindGtk4.cmake  FindLibadwaita.cmake  FindLibdrm.cmake  FindLibpanel.cmake  FindWayland.cmake  ObsDefaults_Linux.cmake  ObsDefaults_Windows.cmake
libobs/: CMakeLists.txt  meson.build  obs-display.c  obs-nix-drm.c  obs-nix-platform.h  obs-nix.c  obs-source.c  obs.h  obsconfig.h.in
libobs-opengl/: CMakeLists.txt  gl-cocoa.m  gl-drm.c  gl-nix.c  gl-nix.h  gl-wayland-egl.c  gl-x11-egl.c  meson.build
libobs/audio-monitoring/: meson.build
libobs/audio-monitoring/pulse/: meson.build
libobs/callback/: meson.build
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h  meson.build
libobs/media-io/: meson.build
libobs/util/: meson.build  platform-nix.c
plugins/: CMakeLists.txt  meson.build
plugins/aja/: meson.build
plugins/coreaudio-encoder/: encoder.cpp
plugins/decklink/: meson.build
plugins/image-source/: meson.build
plugins/linux-capture/: linux-capture.c
plugins/linux-pipewire/: meson.build
plugins/linux-pulseaudio/: meson.build
plugins/obs-ffmpeg/: meson.build
plugins/obs-ffmpeg/ffmpeg-mux/: meson.build
plugins/obs-filters/: meson.build
plugins/obs-libfdk/: meson.build
plugins/obs-outputs/: meson.build
plugins/obs-transitions/: meson.build
plugins/obs-x264/: meson.build
plugins/rtmp-services/: meson.build
plugins/sndio/: meson.build
plugins/text-freetype2/: meson.build
src/: CMakeLists.txt  main.c  meson.build  obs-activities-page.c  obs-activities-page.h  obs-activities-page.ui  obs-application.c  obs-application.h  obs-audio-controller.c  obs-audio-controller.h  obs-audio-device.c  obs-audio-device.h  obs-collection-template.c  obs-collection-template.h  obs-collection.c  obs-collection.h  obs-collections-page.c  obs-collections-page.h  obs-collections-page.ui  obs-config-manager.c  obs-config-manager.h  obs-debug.h.in  obs-display-renderer.c  obs-display-renderer.h  obs-display-widget.c  obs-display-widget.h  obs-log.c  obs-log.h  obs-mixer-page.c  obs-mixer-page.h  obs-mixer-page.ui  obs-scene-editor.c  obs-scene-editor.h  obs-scene-editor.ui  obs-scenes-page.c  obs-scenes-page.h  obs-scenes-page.ui  obs-style-manager.c  obs-style-manager.h  obs-templates-manager.c  (+10 more)
src/audio/: obs-audio-device-controls.c  obs-audio-device-controls.h  obs-audio-device-controls.ui  obs-audio-peak-tracker.c  obs-audio-peak-tracker.h  obs-volume-bar.c  obs-volume-bar.h
src/collections/: obs-collection-template-icon.c  obs-collection-template-icon.h  obs-new-collection-dialog.c
src/data/: com.obsproject.Studio.GTK4.desktop.in  meson.build
src/preferences/: obs-appearance-page.c  obs-appearance-page.h  obs-appearance-page.ui  obs-preferences-dialog.c  obs-preferences-dialog.h  obs-preferences-dialog.ui  obs-theme-card.c  obs-theme-card.h  obs-theme-card.ui
src/profiles/: obs-profiles-dialog.c  obs-profiles-dialog.h  obs-profiles-dialog.ui
src/scenes/: obs-collection-template-icon.c  obs-collection-template-icon.h  obs-collection-template-icon.ui  obs-new-collection-dialog.c  obs-new-collection-dialog.h  obs-new-collection-dialog.ui
src/styles/default/: style-dark.css  style.css
src/styles/sakura/: style-dark.css  style.css
subprojects/: epoxy.wrap  gtk4.wrap  jansson.wrap  libadwaita.wrap  libpanel.wrap
