libobs_deps += [
  gio_dep,
  libavcodec_dep,
  libavformat_dep,
  libavutil_dep,
  libswscale_dep,
]

libobs_public_headers += files([
  'libnsgif/libnsgif.h',
  'axisang.h',
  'bounds.h',
  'effect-parser.h',
  'graphics.h',
  'graphics-internal.h',
  'half.h',
  'image-file.h',
  'input.h',
  'math-defs.h',
  'math-extra.h',
  'matrix3.h',
  'matrix4.h',
  'plane.h',
  'quat.h',
  'shader-parser.h',
  'srgb.h',
  'vec2.h',
  'vec3.h',
  'vec4.h',
])

libobs_sources += files([
  'libnsgif/libnsgif.c',
  'graphics.c',
  'graphics-ffmpeg.c',
  'graphics-imports.c',
  'axisang.c',
  'bounds.c',
  'effect.c',
  'effect-parser.c',
  'image-file.c',
  'math-extra.c',
  'matrix3.c',
  'matrix4.c',
  'plane.c',
  'quat.c',
  'shader-parser.c',
  'texture-render.c',
  'vec2.c',
  'vec3.c',
  'vec4.c',
])
