libobs_deps += [
  libswresample_dep,
]

libobs_public_headers += files([
  'audio-io.h',
  'audio-math.h',
  'audio-resampler.h',
  'format-conversion.h',
  'frame-rate.h',
  'media-io-defs.h',
  'media-remux.h',
  'video-frame.h',
  'video-io.h',
  'video-scaler.h',
])

libobs_sources += files([
  'audio-io.c',
  'audio-resampler-ffmpeg.c',
  'format-conversion.c',
  'media-remux.c',
  'video-fourcc.c',
  'video-frame.c',
  'video-io.c',
  'video-matrices.c',
  'video-scaler-ffmpeg.c',
])
